data/derived/comb/progs/unify/prog5326.ml.out
Characters 146-147:
  else (1, (x mod 10)::1)
                       ^
Error: This expression has type int but an expression was expected of type
         int list
